# reactomegsa-viz

./: .gitignore  README.md  pyproject.toml
.github/: test.yaml
.github/workflows/: deploy.yaml  test.yaml
reactomegsa_viz/: __init__.py  cli.py  html_report_generator.py
reactomegsa_viz/assets/: report_template.html
tests/: test_html_generation.py
