[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.html", "*.svg"]

[project]
name = "reactomegsa_viz"
version = "0.2"
authors = [
  { name="Inigo Oyarzun", email="inigo.oyarzunlafuente@meduniwien.ac.at" },
  { name="Johannes Griss", email="johannes.griss@meduniwien.ac.at" }
]
description = "Package is designed to create a html report from ReactomeGSA results"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "jinja2>=3.1.6",
    "click",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/grisslab/reactomegsa-viz"

[project.scripts]
create_reactome_report = "reactomegsa_viz.cli:create_report"